# ngsgui

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  README.rst  install.sh  setup.py
conda/: bld.bat  build.sh
conda/ngsolve_gui/: bld.bat  build.sh  meta.yaml
demo/: 1d.py  action.py  example.py  example2d.py  example_curved.py  example_elements.py  example_scene.py  genmesh.py  geo.py  hybrid_dg.py  interactive.py  interactive2.py  periodic.py  pickling.py  plot.py  vectors.py
examples/: CMakeLists.txt  main.cpp
glfw_gui/: .gitignore  CMakeLists.txt
glfw_gui/examples/: CMakeLists.txt  draw_gf_2d.py  draw_mesh_2d.py  draw_mesh_3d.py  main.cpp  poisson.py
glfw_gui/inc/: generate_shader.hpp  glmath.hpp  gui.hpp
glfw_gui/src/: CMakeLists.txt  gui.cpp  shader.cpp
inc/: generate_shader.hpp  glerror.hpp  glmath.hpp  shader.hpp
pyside/: CMakeLists.txt
pyside/demo/: example.py  example_curved.py  gl.py  gui_pyside.py  shader.frag  shader.py  shader.vert
pyside/inc/: generate_shader.hpp  glerror.hpp  glmath.hpp  gui.hpp  linmath.h
pyside/src/: CMakeLists.txt  gl.py  glmath.py  gui.cpp  gui.py  shader.cpp  shader.py
src/: CMakeLists.txt  __init__.py  __main__.py  code_editor.py  config.py  config.py.in  console.py  gl.py  gl_interface.py  glmath.py  globalSettings.py  glwindow.py  glwindow.py.in  gui.cpp  gui.py  jupyter.py  menu.py  ngsolve  plot.py  plugin.py  scenes.py  settings.py  shader.py  start.py  stdPipes.py  syntax.py  systemmonitor.py  thread.py  toolbox.py  widgets.py
src/code_editor/: CMakeLists.txt  __init__.py  baseEditor.py  button_area.py  button_area.py.in  emacs-integration.el  emacs.py  syntax.py  text_finder.py  text_partition.py  texteditor.py  utils.py
src/code_editor/icons/: CMakeLists.txt
src/icons/: CMakeLists.txt  __init__.py
src/shader/: CMakeLists.txt  __init__.py  bbnd.frag  bbnd.vert  clipping.geom  clipping.vert  colorbar.frag  colorbar.vert  cross.frag  cross.vert  elements.frag  elements.geom  elements.vert  fieldlines.frag  fieldlines.vert  fieldlines_draw.geom  fieldlines_filter.geom  filter_elements.geom  filter_elements.vert  font.frag  font.geom  font.vert  generate_interpolation_shader.py  generated_interpolation.inc  geo.frag  geo.vert  geom2d.vert  interpolation.inc  isosurface.geom  lines.tesc  lines.tese  mesh.frag  mesh.geom  mesh.tese  mesh.vert  mesh_simple.frag  mesh_simple.tese  mesh_simple.vert  numbers.geom  pass_through.vert  (+16 more)
src/spyder_ngsgui/: __init__.py  ngsgui_plugin.py  startup.py
test/: headless.py  meshes.py  single_tet.py  test_automatic.py  test_gui.py  test_mesh_2d.py  test_single_elements.py
test/images/: .gitignore
vulkan/src/: .gitignore  build.sh  main.cpp  new.cpp  trig.frag  trig.vert  utils.inc  vkutil.hpp
