cmake_minimum_required(VERSION 3.3)
project(NGVIS)

set(NGVIS_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(NGVIS_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})

find_package(NGSolve CONFIG REQUIRED PATHS $ENV{NETGENDIR}/.. /opt/netgen)

set(CMAKE_INSTALL_PREFIX ${NGSOLVE_INSTALL_DIR}/${NGSOLVE_INSTALL_DIR_PYTHON} CACHE PATH "Install dir" FORCE)

add_subdirectory(src)
