install(FILES
  mesh.frag mesh.vert mesh.geom solution.frag solution.geom solution.vert solution1d.frag solution1d.vert
  cross.vert cross.frag
  clipping.vert clipping.geom vector.geom isosurface.geom utils.inc interpolation.inc
  font.vert font.frag font.geom tess.tesc tess.tese
  bbnd.vert bbnd.frag
  geo.vert
  colorbar.vert colorbar.frag
  DESTINATION ngsolve/gui/shader
)
